# qvinace

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  GuiMonitor.qml  GuiMonitor.qml.b  QResources.qrc  Solid.qml  c-gui-monitor.cpp  c-gui-monitor.hpp  crt.frag  crt.qsb  main.cxx  mainwindow.cxx  mainwindow.h  mainwindow.ui
src/core/: CMakeLists.txt  c-io-unit.cpp  c-io-unit.hpp  c-memory.cpp  c-memory.hpp  c-processor.cpp  c-processor.hpp  c-processor6502.cpp  c-processor6502.hpp  types.h
src/core/busses/: c-io-rom-bus.cpp  c-io-rom-bus.hpp  c-language-card-bus.cpp  c-language-card-bus.hpp  c-main-memory-bus.cpp  c-main-memory-bus.hpp  c-slot-rom-bus.cpp  c-slot-rom-bus.hpp
src/core/models/: c-apple2e-core.cpp  c-apple2e-core.hpp
src/core/units/: c-disk-unit.cpp  c-disk-unit.hpp  c-game-unit.cpp  c-game-unit.hpp  c-graphic-mode-unit.cpp  c-graphic-mode-unit.hpp  c-io-rom-unit.cpp  c-io-rom-unit.hpp  c-keyboard-unit.cpp  c-keyboard-unit.hpp  c-language-card-unit.cpp  c-language-card-unit.hpp  c-slots-unit.cpp  c-slots-unit.hpp  c-speaker-unit.cpp  c-speaker-unit.hpp  c-text-mode-unit.cpp  c-text-mode-unit.hpp  c-unit.hpp
src/gui/: CMakeLists.txt  c-gui-monitor.cpp  c-gui-monitor.hpp
src/hardware/: CMakeLists.txt  c-cycle-and-wait-clock.cpp  c-cycle-and-wait-clock.hpp  c-disk-drive.cpp  c-disk-drive.hpp  c-floppy-disk.cpp  c-floppy-disk.hpp  c-keyboard.cpp  c-keyboard.hpp  c-paddles.cpp  c-paddles.hpp  c-speaker.cpp  c-speaker.hpp  clock.cpp  clock.hpp  gcr.cpp  gcr.h
src/oldgui/: c-pulse-audio-sound.cpp  c-pulse-audio-sound.hpp  c-sound.cpp  c-sound.hpp
(+25 files in other folders)
